--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="header">
-  <img class="header-logo" src="../public/logo-green.png" alt="movalova logo" />
+  <img class="header-logo" src="/movalova/assets/logo-green-e0ee6ba3.png" alt="movalova logo" />
   <nav class="header-nav">
     <ul class="header-list">
       <li class="header-list-item">
@@ -352,7 +352,7 @@
 </section>
 
     <footer>
-  <img src="../public//logo-beige.png" alt="movalova logo" />
+  <img src="/movalova/assets/logo-beige-d6f766e5.png" alt="movalova logo" />
   <div>
     <h3>Контакти</h3>
     <ul>
